# LAMA

./: .gitignore  LICENCE  README.md
doc/: Grammar.tex  Types.tex
example/: .gitignore  Counter.scade  Examples.scade  NestedStateMachine.scade  SubAutomaton.lm  Switch-coinduction.smt  Switch.lm  Switch.scade  Switch.smt  TemporalRewriteTest.scade  TemporalTest.lm  TestMatching.lm  Types.lm  UpDownCounter.lm  UpDownCounter.scade  UpDownCounterEnumAutom.lm  UpDownCounterNoAutom.lm  User.scade  User_Package.scade  runBase.sh  runBmc.sh  runInd.sh  runLevelcrossing.sh  runLevelcrossingAll.sh  translate.sh
example/Chrono/: Chrono.scade  Chrono.tex  ChronoEx.lm  Makefile
example/UpDownCounter/: UpDownCounter.lm  UpDownCounter.scade  UpDownCounterNoAutom.lm  UpDownCounterSimplified.scade
example/WeakTranslation/: WeakStrongPar.scade  WeakStrongPar_CondStateAssoc.out  WeakStrongPar_FF.out  WeakStrongPar_FT.out  WeakStrongPar_TF.out  WeakStrongPar_TT.out  WeakStrongPar_Transitive.out
grammar/: .gitignore  Bemerkungen.txt  LAMA.cf  MakeSkelQualified.sh  RenameParser.sh  RewriteComment.sh  ToLazyBS.sh  TransGrammar.sh
highlighter/gedit/: lama.lang  scade.lang
highlighter/latex/: boilerplate.tex  scade.tex
interpreter/: LAMA.cabal  Main.hs
interpreter/lib/Data/Graph/Inductive/: DAG.hs  GenShow.hs  NodeMapSupport.hs  UnlabeledGraph.hs
interpreter/lib/Lang/LAMA/: Dependencies.hs  Environment.hs  Identifier.hs  Interpret.hs  Parse.hs  Pretty.hs  PrettyTyped.hs  Structure.hs  Transform.hs  TypeCheck.hs  TypedStructure.hs  Types.hs  UnTypedStructure.hs
interpreter/lib/Lang/LAMA/Parser/: Abs.hs  ErrM.hs  Lex.x  Par.y  Print.hs
interpreter/lib/Lang/LAMA/Typing/: Environment.hs  TypeCheck.hs  TypedStructure.hs
interpreter/test/: TestAbsTrans.hs  test-lama.hs
lamaSMT/: LamaSMT.cabal  Main.hs  smt_stream.py
lamaSMT/lib/: Check.hs  Definition.hs  LamaSMTTypes.hs  Model.hs  NatInstance.hs  Posets.hs  RewriteAutomaton.hs  SMTEnum.hs  Strategy.hs  Transform.hs  TransformEnv.hs  TypeInstances.hs  Unit.hs  Wrapping.hs
lamaSMT/lib/Internal/: Monads.hs
lamaSMT/lib/Strategies/: BMC.hs  Factory.hs  Invariant.hs  KInduction.hs
language/: LAMA.cabal
language/lib/Data/Bits/: Size.hs
language/lib/Data/Graph/Inductive/: MonadSupport.hs  NodeMapSupport.hs
language/lib/Lang/LAMA/: Dependencies.hs  Fix.hs  Identifier.hs  Parse.hs  Pretty.hs  PrettyTyped.hs  Structure.hs  Transform.hs  Types.hs  UnTypedStructure.hs
language/lib/Lang/LAMA/Parser/: Abs.hs  ErrM.hs  Lex.x  Par.y  Print.hs
language/lib/Lang/LAMA/Structure/: PosIdentTyped.hs  PosIdentUntyped.hs  SimpIdentUntyped.hs
language/lib/Lang/LAMA/Typing/: Environment.hs  TypeCheck.hs  TypedStructure.hs
scade2lama/: Main.hs  Scade2Lama.cabal
scade2lama/lib/: ExtractPackages.hs  FlattenListExpr.hs  Inlining.hs  Lookup.hs  Options.hs  RewriteClockedEquation.hs  RewriteOperatorApp.hs  RewriteTemporal.hs  RewriteTimesExpr.hs  TrEquation.hs  Transform.hs  TransformAutomata.hs  TransformCommon.hs  TransformMonads.hs  TransformPackage.hs  TransformSimple.hs  UnrollFby.hs  UnrollTemporal.hs  VarGen.hs
scade2lama/lib/Control/: Wrapping.hs
semantics/: absyn.rml  lama.rml
