Name:           LAMASimulator
Version:        0.1
Build-Type:     Simple
Cabal-Version:  >= 1.10
Description:
  Interpreter for LAMA

Executable test-lama
  default-language: Haskell2010
  build-depends: base, containers, mtl, bytestring, natural-numbers,
    transformers, pretty, array, HUnit, language-lama, fgl >= 5.5.0.0
  hs-source-dirs: test lib
  GHC-Options: -Wall
  other-modules:
    TestAbsTrans
  main-is: test-lama.hs

Executable lamai
  default-language: Haskell2010
  Build-Depends: base, containers, mtl, bytestring, natural-numbers,
    transformers, pretty, array, fgl, graphviz, text, filepath, placeholders, language-lama
  Hs-Source-Dirs: . lib
  GHC-Options: -Wall -O2
  other-modules:
    Lang.LAMA.Interpret
  Main-Is: Main.hs
