Name:           LamaSMT
Version:        0.1
Build-Type:     Simple
Cabal-Version:  >= 1.10
Description:
  Verification of LAMA programs using SMT

Executable lamasmt
  default-language: Haskell2010
  Build-Depends: base, containers, language-lama, smtlib2,
                 transformers, bytestring, natural-numbers,
                 attoparsec, atto-lisp, text, mtl, placeholders
  Hs-Source-Dirs: . lib
  GHC-Options: -Wall
  other-modules:
    Transform
  Main-Is: Main.hs
